--- a/style.css
+++ b/style.css
@@ -1,10 +1,9 @@
 body{
-
-    background-image: url(assets/qbkls.png);
+  background-image: url(assets/qbkls.png);
 }
 
 .mynav{
-    margin: 17px;
+    margin: 22px;
     font-family: Georgia, 'Times New Roman', Times, serif;
     float: right;
 }
@@ -12,6 +11,7 @@ body{
 .nav-link{
     color: gray;
     font-size: large;
+    margin-left: -10px;
 }
 nav a:hover, nav a:focus{
     text-decoration: underline;
@@ -23,17 +23,23 @@ nav a:hover, nav a:focus{
     background-color:teal;
     color: white;
     padding: 11px;
-    margin: 16px 16px 0px 45px;
-
+    margin: 16px 16px 0px 63px;
 }
+
+.myname-portfolio{
+    width: 32%;
+    background-color:teal;
+    color: white;
+    padding: 11px;
+    margin: 16px 16px 0px 63px;
+}
+
 .container{
     margin: 0px;
     clear: both;
     overflow: auto;
     background-color: white;
     max-width: 100%;
-    
-
 }
 
 .me{
@@ -51,7 +57,6 @@ nav a:hover, nav a:focus{
     margin: 35px 80px;
     padding: 10px;
     box-shadow: 5px 10px grey;
-
 }
 
 .info{
@@ -63,16 +68,17 @@ nav a:hover, nav a:focus{
     margin-bottom: 0;
     border-color: black;
     box-shadow:  5px 13px grey;
-    margin: 50px;
+    margin: 35px;
     padding: 20px;
+    margin-left: 77px;
 }
 
 .container-form-portfolio{
-    background-color: white;
+    background-color: whitesmoke;
     border-color: black;
     box-shadow:  5px 13px grey;
-    margin: 10px 120px;
-
+    margin: 35px 75px;
+    padding-left: 12px;
 }
 
 .text{
@@ -95,22 +101,17 @@ nav a:hover, nav a:focus{
 }
 
 .portfolio-img{
-    padding: 20px;
-   
+    padding: 20px 20px 20px 0px;
 }
 
 .h2-portfolio{
-    background-color:white;
+    background-color: whitesmoke;
     color: #4aaaa5;
     border-bottom: gray solid 1px;
     padding: 15px;
     margin: 15px;
 }
     
-
-
-
-
 
 footer{
     position: absolute;
