--- a/public/css/style.css
+++ b/public/css/style.css
@@ -76,13 +76,15 @@ nav a:hover, nav a:focus{
 
 
 .container-form-portfolio{
-    background-color: #a8c8daf0;
+    background-color: #e3e4e5;
     border-color: black;
     box-shadow:  5px 13px grey;
     margin: 35px 75px;
     padding-left: 40px;
     padding-bottom: 15px;
 }
+
+
 
 .text{
     position: absolute;
@@ -95,47 +97,20 @@ nav a:hover, nav a:focus{
     font-family: Arial, Helvetica, sans-serif;
 }
 
-.weatherText{
+.Text{
     position: absolute;
-    cursor: pointer;
     top: 161px;
     text-align: center;
     background-color: #ff0c00;
     color: white;
-    width: 44%;
+    width: 59%;
     padding: 4px 8px; 
 }
 
-.codeQuizText{
-    position: absolute;
+.clickLinks{
     cursor: pointer;
-    top: 161px;
-    text-align: center;
-    background-color: #ff0c00;
-    color: white;
-    width: 44%;
-    padding: 4px 8px; 
 }
-.LocalWireText{
-    position: absolute;
-    cursor: pointer;
-    top: 161px;
-    text-align: center;
-    background-color: #ff0c00;
-    color: white;
-    width: 44%;
-    padding: 4px 8px;
-}
-.readMeText{
-    position: absolute;
-    cursor: pointer;
-    top: 161px;
-    text-align: center;
-    background-color: #ff0c00;
-    color: white;
-    width: 44%;
-    padding: 4px 8px; 
-}
+
 
 
 .contact-h2{
@@ -150,8 +125,8 @@ nav a:hover, nav a:focus{
 }
 
 .h2-portfolio{
-    background-color: whitesmoke;
-    color: #4aaaa5;
+    background-color: #bd2130;
+    color: white;
     border-bottom: gray solid 1px;
     padding: 15px;
     margin-right: 36px;
@@ -159,8 +134,8 @@ nav a:hover, nav a:focus{
     
 
 footer{
-    position: relative;
-    top: 229px;
+    position: fixed;
+    bottom: 0;
     background-color:#666666;
     color: white;
     width: 100%;
